--- a/springmvc-hib-withoutxml/pom.xml
+++ b/springmvc-hib-withoutxml/pom.xml
@@ -9,6 +9,12 @@
   <url>http://maven.apache.org</url>
   
   <dependencies>
+ 		 <dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>6.0</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- DB related dependencies -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -35,7 +41,7 @@
 			<artifactId>javassist</artifactId>
 			<version>3.12.1.GA</version>
 		</dependency>
-		<!-- SPRING -->
+		<!-- Spring framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -94,6 +100,30 @@
 			<version>1.0.0.M1</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- JSF -->
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>2.1.13</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.1.13</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>3.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>dot-luv</artifactId>
+			<version>1.0.9</version>
+		</dependency>
 	</dependencies>
 	
 	<properties>
@@ -108,8 +138,15 @@
 			<name>Spring Maven Milestone Repository</name>
 			<url>http://maven.springframework.org/milestone</url>
 		</repository>
+		
+		<repository>
+			<id>prime-repo</id>
+			<name>PrimeFaces Maven Repository</name>
+			<url>http://repository.primefaces.org</url>
+			<layout>default</layout>
+		</repository>
 	</repositories>
-  
+	
   <build>
     <finalName>springmvc-hib-withoutxml</finalName>
     <plugins>
