--- a/springmvc-hib-withoutxml/src/main/webapp/WEB-INF/web.xml
+++ b/springmvc-hib-withoutxml/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,36 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
+	<context-param>
+		<param-name>javax.faces.PROJECT_STAGE</param-name>
+		<param-value>Development</param-value>
+	</context-param>
+	<context-param>
+		<param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
+		<param-value>0</param-value>
+	</context-param>
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>dot-luv</param-value>
+	</context-param>
+<!-- 	<error-page> -->
+<!-- 		<exception-type>javax.faces.application.ViewExpiredException -->
+<!-- 		</exception-type> -->
+<!-- 		<location>/faces/index.xhtml</location> -->
+<!-- 	</error-page> -->
+<!-- 	<welcome-file-list> -->
+<!-- 		<welcome-file>faces/index.xhtml</welcome-file> -->
+<!-- 	</welcome-file-list> -->
+<servlet>
+    <servlet-name>Faces Servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+<!--     <load-on-startup>0</load-on-startup> -->
+</servlet>
 
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>*.faces</url-pattern>
+		<url-pattern>/faces/*</url-pattern>
+	</servlet-mapping>
 
 </web-app>
